add: final configurations uploaded to codepen

--- a/personalPortfolio/css/_form.sass
+++ b/personalPortfolio/css/_form.sass
@@ -56,6 +56,8 @@ form#contact
         // text-align: left
     input, textarea
         flex: 0 1 70%
+    input[type=submit]
+        flex: 0 1 auto
 
 @media (max-width: map-get($breakpoints-sizes, sm))
     .input
