--- a/personalPortfolio/css/_main_styles.sass
+++ b/personalPortfolio/css/_main_styles.sass
@@ -27,6 +27,7 @@ a
     // color: $font-color-a
 
 hr 
+    margin-bottom: 0
 	display: block 
 	unicode-bidi: isolate 
 	margin-block-start: 0.5em 
