--- a/personalPortfolio/css/challenge/_main_styles.sass
+++ b/personalPortfolio/css/challenge/_main_styles.sass
@@ -14,6 +14,7 @@ main
     // overflow: hidden
 
 #welcome-section
+    overflow: hidden
     min-height: 100vh
     background: url('../img/projects/office_v3.png')
     background-size: 140%
@@ -39,7 +40,7 @@ section#welcome-section
 @media (max-width: map-get($breakpoints-sizes, md))
     #welcome-section 
         & > div
-            margin-top: 14em!important
+            margin-top: 25em!important
         .svg-background
             display: none
 
