--- a/surveyForm/styles/classes/_theme.sass
+++ b/surveyForm/styles/classes/_theme.sass
@@ -1,7 +1,8 @@
 /* Color Theme Swatches in Hex */
 $accent: #F7CE03
 $primary: #ABD4D2
-$secondary: #9885ED
+$secondary: #3F51B5
+$error: #C62828
 
 /* Color Theme Swatches in RGBA */
 // $accent: rgba(77,54,40, 1)
