--- a/surveyForm/styles/index/index.css
+++ b/surveyForm/styles/index/index.css
@@ -61,13 +61,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -121,13 +121,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -181,13 +181,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -241,13 +241,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -301,13 +301,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -361,13 +361,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -421,13 +421,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -481,13 +481,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -541,13 +541,13 @@ h6 {
 .color-secondary,
 .before-color-secondary:before,
 .after-color-secondary:after {
-  color: #9885ED !important;
+  color: #3F51B5 !important;
 }
 
 .secondary,
 .before-secondary:before,
 .after-secondary:after {
-  background: #9885ED !important;
+  background: #3F51B5 !important;
 }
 
 .color-main,
@@ -596,12 +596,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -646,12 +646,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -696,12 +696,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -746,12 +746,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -796,12 +796,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -846,12 +846,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -896,12 +896,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -946,12 +946,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -996,12 +996,12 @@ h6 {
 
 .dark.color-secondary,
 .dark .color-secondary {
-  color: #1e0f64 !important;
+  color: black !important;
 }
 
 .dark.secondary,
 .dark .secondary {
-  background: #1e0f64 !important;
+  background: black !important;
 }
 
 .dark.color-main,
@@ -1041,11 +1041,11 @@ h6 {
 }
 
 .alpha-color-secondary-1 {
-  color: rgba(152, 133, 237, 0.9) !important;
+  color: rgba(63, 81, 181, 0.9) !important;
 }
 
 .alpha-secondary-1 {
-  background: rgba(152, 133, 237, 0.9) !important;
+  background: rgba(63, 81, 181, 0.9) !important;
 }
 
 .alpha-color-main-1 {
@@ -1081,11 +1081,11 @@ h6 {
 }
 
 .alpha-color-secondary-2 {
-  color: rgba(152, 133, 237, 0.8) !important;
+  color: rgba(63, 81, 181, 0.8) !important;
 }
 
 .alpha-secondary-2 {
-  background: rgba(152, 133, 237, 0.8) !important;
+  background: rgba(63, 81, 181, 0.8) !important;
 }
 
 .alpha-color-main-2 {
@@ -1121,11 +1121,11 @@ h6 {
 }
 
 .alpha-color-secondary-3 {
-  color: rgba(152, 133, 237, 0.7) !important;
+  color: rgba(63, 81, 181, 0.7) !important;
 }
 
 .alpha-secondary-3 {
-  background: rgba(152, 133, 237, 0.7) !important;
+  background: rgba(63, 81, 181, 0.7) !important;
 }
 
 .alpha-color-main-3 {
@@ -1161,11 +1161,11 @@ h6 {
 }
 
 .alpha-color-secondary-4 {
-  color: rgba(152, 133, 237, 0.6) !important;
+  color: rgba(63, 81, 181, 0.6) !important;
 }
 
 .alpha-secondary-4 {
-  background: rgba(152, 133, 237, 0.6) !important;
+  background: rgba(63, 81, 181, 0.6) !important;
 }
 
 .alpha-color-main-4 {
@@ -1201,11 +1201,11 @@ h6 {
 }
 
 .alpha-color-secondary-5 {
-  color: rgba(152, 133, 237, 0.5) !important;
+  color: rgba(63, 81, 181, 0.5) !important;
 }
 
 .alpha-secondary-5 {
-  background: rgba(152, 133, 237, 0.5) !important;
+  background: rgba(63, 81, 181, 0.5) !important;
 }
 
 .alpha-color-main-5 {
@@ -1241,11 +1241,11 @@ h6 {
 }
 
 .alpha-color-secondary-6 {
-  color: rgba(152, 133, 237, 0.4) !important;
+  color: rgba(63, 81, 181, 0.4) !important;
 }
 
 .alpha-secondary-6 {
-  background: rgba(152, 133, 237, 0.4) !important;
+  background: rgba(63, 81, 181, 0.4) !important;
 }
 
 .alpha-color-main-6 {
@@ -1281,11 +1281,11 @@ h6 {
 }
 
 .alpha-color-secondary-7 {
-  color: rgba(152, 133, 237, 0.3) !important;
+  color: rgba(63, 81, 181, 0.3) !important;
 }
 
 .alpha-secondary-7 {
-  background: rgba(152, 133, 237, 0.3) !important;
+  background: rgba(63, 81, 181, 0.3) !important;
 }
 
 .alpha-color-main-7 {
@@ -1321,11 +1321,11 @@ h6 {
 }
 
 .alpha-color-secondary-8 {
-  color: rgba(152, 133, 237, 0.2) !important;
+  color: rgba(63, 81, 181, 0.2) !important;
 }
 
 .alpha-secondary-8 {
-  background: rgba(152, 133, 237, 0.2) !important;
+  background: rgba(63, 81, 181, 0.2) !important;
 }
 
 .alpha-color-main-8 {
@@ -1361,11 +1361,11 @@ h6 {
 }
 
 .alpha-color-secondary-9 {
-  color: rgba(152, 133, 237, 0.1) !important;
+  color: rgba(63, 81, 181, 0.1) !important;
 }
 
 .alpha-secondary-9 {
-  background: rgba(152, 133, 237, 0.1) !important;
+  background: rgba(63, 81, 181, 0.1) !important;
 }
 
 .alpha-color-main-9 {
@@ -2653,6 +2653,17 @@ button {
 }
 
 @media screen and (min-width: 0px) {
+  .col-xs0 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 0%;
+            flex: 0 1 0%;
+  }
+  .offset-xs0 {
+    margin-left: 0% !important;
+  }
+}
+
+@media screen and (min-width: 0px) {
   .col-xs1 {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 8.33333%;
@@ -2793,6 +2804,17 @@ button {
 @media screen and (min-width: 600px) {
   .gt-sm-none {
     display: none;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .col-sm0 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 0%;
+            flex: 0 1 0%;
+  }
+  .offset-sm0 {
+    margin-left: 0% !important;
   }
 }
 
@@ -2941,6 +2963,17 @@ button {
 }
 
 @media screen and (min-width: 960px) {
+  .col-md0 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 0%;
+            flex: 0 1 0%;
+  }
+  .offset-md0 {
+    margin-left: 0% !important;
+  }
+}
+
+@media screen and (min-width: 960px) {
   .col-md1 {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 8.33333%;
@@ -3085,6 +3118,17 @@ button {
 }
 
 @media screen and (min-width: 1280px) {
+  .col-lg0 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 0%;
+            flex: 0 1 0%;
+  }
+  .offset-lg0 {
+    margin-left: 0% !important;
+  }
+}
+
+@media screen and (min-width: 1280px) {
   .col-lg1 {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 8.33333%;
@@ -3225,6 +3269,17 @@ button {
 @media screen and (min-width: 1920px) {
   .gt-xl-none {
     display: none;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .col-xl0 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 0%;
+            flex: 0 1 0%;
+  }
+  .offset-xl0 {
+    margin-left: 0% !important;
   }
 }
 
@@ -3459,7 +3514,7 @@ pre {
 
 .custom-form {
   width: 100%;
-  height: 40rem;
+  height: 40em;
   position: relative;
 }
 
@@ -3479,9 +3534,13 @@ pre {
   font-size: 1.2em;
 }
 
+.custom-form .fieldset-content {
+  margin-top: 2rem;
+}
+
 .custom-form .controls {
   height: auto;
-  padding: 2rem;
+  padding: 1rem 0;
 }
 
 .custom-form legend {
@@ -3502,9 +3561,9 @@ pre {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   opacity: 0;
@@ -3584,7 +3643,6 @@ select {
 .controls fieldset {
   background: white;
   padding: 0.5em;
-  border-radius: 999999px;
 }
 
 .radio-label {
@@ -3612,8 +3670,8 @@ select {
 }
 
 .radio-label input:checked ~ .symbol {
-  background: blue;
-  border: 0.25em solid white;
+  background: #3F51B5;
+  border: 0em solid white;
 }
 
 .symbol {
@@ -3624,10 +3682,11 @@ select {
   top: 0;
   left: 0;
   border-radius: 50%;
+  border: 0.25em solid white;
 }
 
 .symbol.error {
-  background: red !important;
+  background: #C62828 !important;
 }
 
 .radio-container, .checkbox-container {
@@ -3674,7 +3733,7 @@ select {
 .radio-container input:hover ~ .checkmark:before,
 .radio-container input:focus ~ .checkmark:before, .checkbox-container input:hover ~ .checkmark:before,
 .checkbox-container input:focus ~ .checkmark:before {
-  background: red;
+  background: #C62828;
 }
 
 .radio-container input:checked ~ .checkmark:after, .checkbox-container input:checked ~ .checkmark:after {
@@ -3690,7 +3749,6 @@ select {
   background: white;
   margin-right: 1em;
   position: static;
-  border-radius: 50%;
 }
 
 .radio-container .checkmark:before, .checkbox-container .checkmark:before {
@@ -3698,11 +3756,15 @@ select {
   border-radius: 999999px;
 }
 
+.radio-container .checkmark {
+  border-radius: 50%;
+}
+
 .radio-container .checkmark:after, .checkbox-container .checkmark:after {
   width: 1em;
   height: 1em;
   opacity: 0;
-  background: red;
+  background: #C62828;
   z-index: 1;
 }
 
@@ -3845,7 +3907,7 @@ input#submit {
 }
 
 .input-container .input-options {
-  background: green;
+  background: #3F51B5;
   position: absolute;
   right: 0;
   top: 0;
@@ -3869,6 +3931,15 @@ input#submit {
 
 .input-container .input-message {
   display: none;
+  color: #C62828;
+}
+
+fieldset.error input, fieldset.error select, fieldset.error textarea, .input-container.error input, .input-container.error select, .input-container.error textarea {
+  border: 0.25em solid #C62828 !important;
+}
+
+fieldset.error .input-message, .input-container.error .input-message {
+  display: block;
 }
 
 @media print {
