--- a/surveyForm/styles/challenge/_radio_checks.sass
+++ b/surveyForm/styles/challenge/_radio_checks.sass
@@ -1,6 +1,6 @@
 .form-box
     width: 100%
-    // background: red
+    // background: $error
     background: transparent
     display: flex
     flex-direction: row
@@ -23,7 +23,7 @@
     fieldset
         background: white
         padding: 0.5em
-        border-radius: 999999px
+        // border-radius: 999999px
 
 .radio-label
     width: 2em
@@ -41,8 +41,8 @@
         width: 0
         height: 0
         &:checked ~ .symbol
-            background: blue
-            border: 0.25em solid white
+            background: $secondary
+            border: 0em solid white
 
 .symbol
     width: 100%
@@ -52,9 +52,10 @@
     top: 0
     left: 0
     border-radius: 50%
+    border: 0.25em solid white
 
 .symbol.error
-    background: red!important
+    background: $error!important
 
 .radio-container, .checkbox-container
     display: flex
@@ -81,7 +82,7 @@
     input:hover,
     input:focus
         & ~ .checkmark:before
-            background: red
+            background: $error
     input:checked ~ .checkmark:after
         opacity: 1
     .checkmark
@@ -91,26 +92,21 @@
         background: white
         margin-right: 1em
         position: static
-        border-radius: 50%
         @extend %basic-before
         @extend %basic-after
         &:before
             z-index: -1
             border-radius: 999999px
-            // border-radius: 50%
-            // background: yellow
-            // box-shadow: 0 0 0 0.25em black
 
-        // &:after
-        //     z-index: 1
-        //     background: pink
+.radio-container .checkmark
+    border-radius: 50%
 
 .radio-container, .checkbox-container
     .checkmark:after
         width: 1em
         height: 1em
         opacity: 0
-        background: red
+        background: $error
         z-index: 1
 
 .radio-container .checkmark:after
