add: alias for img path

--- a/personalPortfolio/src/styles/challenge/_main_styles.sass
+++ b/personalPortfolio/src/styles/challenge/_main_styles.sass
@@ -15,7 +15,7 @@ main
 
 #welcome-section
     min-height: 100vh
-    background: url('../img/projects/office_v3.png')
+    background: url('~@img/projects/office_v3.png')
     background-size: 140%
     background-position: left top
     background-repeat: no-repeat
@@ -55,7 +55,7 @@ section#welcome-section
     grid-gap: 1em
 
 #contact-art
-    background-image: url('../img/grito.svg')
+    background-image: url('~@img/grito.svg')
     background-repeat: no-repeat
     background-position: top center
 
