--- a/personalPortfolio/src/styles/classes/_form.sass
+++ b/personalPortfolio/src/styles/classes/_form.sass
@@ -9,7 +9,7 @@
 $input-height: 4em
 
 form#contact
-    // background-image: url('../img/projects/gab.png')
+    // background-image: url('~@img/projects/gab.png')
     & *
         outline: none
     &:before
