add: inject into body HtmlWebPackPlugin

--- a/personalPortfolio/src/styles/classes/_index.sass
+++ b/personalPortfolio/src/styles/classes/_index.sass
@@ -18,7 +18,8 @@
 @import './icon'
 @import './pre'
 @import './checkbox'
-// @import './form'
+@import './nav'
+@import './form'
 // @import './borders'
 
 @import url('https://fonts.googleapis.com/css?family=#{$google-font-link}:300,400,700')
