--- a/personalPortfolio/src/styles/classes/_form.sass
+++ b/personalPortfolio/src/styles/classes/_form.sass
@@ -56,6 +56,10 @@ form#contact
         // text-align: left
     input, textarea
         flex: 0 1 70%
+    &.input-submit
+        justify-content: center
+        input
+            flex: 0 1 auto
 
 @media (max-width: map-get($breakpoints-sizes, sm))
     .input
