--- a/personalPortfolio/src/styles/classes/_index.sass
+++ b/personalPortfolio/src/styles/classes/_index.sass
@@ -20,6 +20,7 @@
 @import './checkbox'
 @import './nav'
 @import './form'
+@import './buttons'
 // @import './borders'
 
 @import url('https://fonts.googleapis.com/css?family=#{$google-font-link}:300,400,700')
