--- a/personalPortfolio/src/styles/classes/_placeholders.sass
+++ b/personalPortfolio/src/styles/classes/_placeholders.sass
@@ -45,3 +45,9 @@
     position: absolute
     top: 0
     left: 0
+
+%super_radius
+    border-bottom-left-radius: 99999px
+    border-bottom-right-radius: 99999px
+    border-top-left-radius: 99999px
+    border-top-right-radius: 99999px
